# drf-polymorphic

./: .bumpversion.cfg  .readthedocs.yaml  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml  code-quality.yml
docs/: changelog.rst  conf.py  index.rst  quickstart.rst
drf_polymorphic/: __init__.py  apps.py  extensions.py  serializers.py
testapp/: data.py  serializers.py  settings.py  urls.py  views.py
tests/: __init__.py  conftest.py  schema.py  schema.yaml  test_polymorphic.py  test_sanity_checks.py  test_schema_generation.py
