# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = drf-polymorphic
version = 1.0.0
description = Polymorphic serializers without models
long_description = file: README.rst
url = https://github.com/maykinmedia/drf-polymorphic
project_urls =
    Documentation = http://drf-polymorphic.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/drf-polymorphic/blob/main/docs/changelog.rst
    Bug Tracker = https://github.com/maykinmedia/drf-polymorphic/issues
    Source Code = https://github.com/maykinmedia/drf-polymorphic
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = django, rest, polymorphic
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=3.2
    djangorestframework>=3.13
tests_require =
    drf-spectacular
    pytest
    pytest-django
    hypothesis
    tox
    isort
    black
    flake8
    mypy
    django-stubs[compatible-mypy]
    djangorestframework-stubs[compatible-mypy]

[options.packages.find]
include =
    drf_polymorphic
    drf_polymorphic.*

[options.extras_require]
spectacular =
    drf-spectacular
tests =
    drf-spectacular
    pytest
    pytest-django
    hypothesis
    tox
    isort
    black
    flake8
    mypy
    django-stubs[compatible-mypy]
    djangorestframework-stubs[compatible-mypy]
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=drf_polymorphic
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE=testapp.settings
testpaths = tests
pythonpath = .

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc

[coverage:run]
branch = True
source = drf_polymorphic

[coverage:report]
skip_covered = True

[mypy]
plugins =
    mypy_django_plugin.main,mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "testapp.settings"
